--- a/package.json
+++ b/package.json
@@ -13,11 +13,11 @@
     "prestart:prod": "rimraf dist && npm run build",
     "start:prod": "node dist/main.js",
     "lint": "tslint -p tsconfig.json -c tslint.json",
-    "test": "jest",
+    "test": "jest --verbose",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "test:e2e": "jest --config ./test/jest-e2e.json --verbose",
     "db-migrate:create": "typeorm migration:create -n",
     "db-migrate:up": "ts-node ./node_modules/.bin/typeorm migration:run",
     "db-migrate:down": "ts-node ./node_modules/.bin/typeorm migration:revert"
